# nflai

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nflai.ipynb  pyproject.toml
.github/workflows/: terraform.yml
dags/: nfl_dag.py
data/: weeks_output.txt
data/backup /: seasons_output.txt  weeks_output.txt
data/general/: nfl_article.txt
database/193c97a8-4df2-4524-88b4-a542750fa991/: index_metadata.pickle
src/: aws.tf
src/nflai/: apiapp.py  app.py  articles_app.py  docker_test.py  seasons.py  seasons_app.py  weeks_app.py
src/nflai/database/: chroma.sqlite3
src/nflai/templates/: findings.html
terraform/: id_rsa.pub  main.tf  main.tf-docker  main.tf.old  setup.sh  terraform.tfstate  terraform.tfstate.backup  tfplan
